Bug 186461 - folder view sorting not saved
Summary: folder view sorting not saved
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new folder tree (other bugs)
Version First Reported In: 1.11.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 186520 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-07 16:33 UTC by Joske
Modified: 2009-03-19 01:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joske 2009-03-07 16:33:55 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    SuSE RPMs

KMAIL offres in the folder view the possibility to sort the items manually, by drag and drop. These settings are not preserved when I retstart KDE
Comment 1 Jaime Torres 2009-03-08 10:12:16 UTC
Could you specify which aggregation mode and which sort mode are you using?
Because in Versión 4.2.65 (KDE 4.2.65 (KDE 4.3 >= 20090226)) "release 1.5" I am unable to sort the mails by drag and drop in the same folder.
Comment 2 Jaime Torres 2009-03-08 10:14:14 UTC
*** Bug 186520 has been marked as a duplicate of this bug. ***
Comment 3 Joske 2009-03-08 10:36:56 UTC
IMHO, it has nothing to do with any aggregation mode, nor even the list of mails.

It is in the 'Folder view', where you get an overview of the 'folders' the mails are stored in. There you see the list of "inbox, outbox, sent-mail, draft, templates, trash" and whatever folder you've specified.

Kmail provides the possibility (RMB on the 'FOLDER'-bar) to sort these folders manually - which is a useful feature, if only the sort got preserved across the sessions ;-)

Hope this cleared it up ?
Comment 4 Jaime Torres 2009-03-08 11:02:52 UTC
Confirmed, thanks.
Comment 5 Danila Sentiabov 2009-03-12 15:02:54 UTC
Confirming this (KDE 4.2.1/openSUSE 11.1).
It's not only resetting between sessions, it also resets after any folder rearrangements (moving a folder inside other folder, for example).
Comment 6 Szymon Stefanek 2009-03-12 16:19:58 UTC
SVN commit 938643 by stefanek:

Workaround for a qt 4.5 regression related to sorting items
in a QTreeView.

BUG: 186461



 M  +20 -1     folderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938643
Comment 7 Danila Sentiabov 2009-03-12 16:31:42 UTC
Will this fix be included in 4.2.x maintainance release?
Comment 8 Mark van Rossum 2009-03-19 01:25:42 UTC
Is this Qt4.5 only?
I have on my system with qt 4.4.3