Workaround for a qt 4.5 regression related to sorting items in a QTreeView.

BUG: 186461


svn path=/trunk/KDE/kdepim/; revision=938643